--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,17 @@
+@import url('https://fonts.googleapis.com/css?family=Pacifico');
 body {
     text-align: center;
 }
 
 .timer, .score {
   font-size: 1.3rem;
+  margin: 0 1rem;
+  font-family: 'Pacifico', cursive;
 }
 
 .panel {
     display: flex;
-    flex-direction: row;
+    flex-flow: row wrap;
     justify-content: space-around;
     width: 40%;
     margin: 2rem auto 0 auto;
