--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Pacifico');
 body {
     text-align: center;
+    background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
 }
 h1 {
-  font-size: 4rem;
+  font-size: 2rem;
+  font-family: 'Press Start 2P', cursive;
+  text-align: center;
 }
 
 .timer, .score {
@@ -15,7 +18,7 @@ h1 {
 .panel {
     display: flex;
     flex-flow: column wrap;
-    justify-content: space-around;
-    width: 40%;
+    align-items: center;
+    width: 80%;
     margin: 2rem auto 0 auto;
 }
